# rlb

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  test.c
.metals/: metals.mv.db
include/: api.hpp  camera.hpp  gui.hpp  image.hpp  io.hpp  lights.hpp  raylibwrapper.hpp  raylights.h  rlgl.h  rlights.h  stairsPoint.hpp  texture.hpp  toolbar.hpp  triangulate.hpp  vignette.hpp
include/glad/: glad.h
shader/: vignette.fs
src/: ambient_occlusion.fs  api.cpp  glad.c  gui.cpp  image.cpp  io.cpp  lights.cpp  raylibwrapper.cpp  texture.cpp  toolbar.cpp  triangulate.cpp  vignette.cpp
src/imgui/: imgui_demo.cpp
